<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">AddOrUpdateContact</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="kMsgLoading">Loading&#8230;</string>

    <!-- Login activity -->
    <string name="API_KEY">vczc33krngd6w735fta8eus6</string>
    <string name="REDIRECT_URL">http://www.constantcontact.com/index.jsp</string>
    <string name="BASE_URL">https://oauth2.constantcontact.com/</string>
    <string name="AUTHORIZATION_ENDPOINT">oauth2/oauth/siteowner/authorize</string>

    <!-- Search activity -->
    <string name="kMsgEnterEmailAddress">Enter email address</string>
    <string name="kLblSearch">Search</string>
    <string name="kMsgSearchResults">Search results</string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>

    <!-- ContactDetails activity -->
    <string name="kLblId">ID</string>
    <string name="kLblStatus">Status</string>
    <string name="kLblFirstName">First name</string>
    <string name="kLblLastName">Last name</string>
    <string name="kLblMiddleName">Middle name</string>
    <string name="kLblModifiedDate">Modified date</string>
    <string name="kLblSourceDetails">Source details</string>
    <string name="kLblWorkPhone">Work Phone</string>
    <string name="kLblCellPhone">Cell Phone</string>
    <string name="kLblHomePhone">Home Phone</string>
    <string name="kLblFax">Fax</string>
    <string name="kLblPrefix">Prefix</string>
    <string name="kLblJobTitle">Job Title</string>
    <string name="kLblCompanyName">Company Name</string>
    <string name="kLblEmailAddress1">Email Address 1</string>
    <string name="kLblEmailAddress2">Email Address 2</string>
    <string name="kLblEmailAddress3">Email Address 3</string>
    <string name="kLblAddress">Address</string>
    <string name="kLblCustomFields">Custom Fields</string>
    <string name="kLblLists">Lists</string>
    <string name="kLblNotes">Notes</string>
    <string name="kLblUpdate">Update</string>
    <string name="kLblAdd">Add</string>
    <string name="title_activity_contact_lists">ContactListsActivity</string>

    <!-- Contact Lists activity -->
    <string name="kMsgChooseLists">Choose lists</string>
    <string name="kLblSave">Save</string>
    <string name="title_activity_contact_address">ContactAddressActivity</string>

    <!-- Contact Address activity -->
    <string name="kLblLine1">Line 1</string>
    <string name="kLblLine2">Line 2</string>
    <string name="kLblLine3">Line 3</string>
    <string name="kLblCity">City</string>
    <string name="kLblState">State (US/Canada)</string>
    <string name="kLblStateOther">State (Other)</string>
    <string name="kLblPostalCode">Postal Code</string>
    <string name="kLblSubPostalCode">Sub Postal Code</string>
    <string name="kLblCountry">Country</string>
    <string name="title_activity_contact_custom_fields">ContactCustomFieldsActivity</string>

    <!-- Contact CustomFields activity -->
    <string name="kLblCustomField1">Custom Field 1</string>
    <string name="kLblCustomField2">Custom Field 2</string>
    <string name="kLblCustomField3">Custom Field 3</string>
    <string name="kLblCustomField4">Custom Field 4</string>
    <string name="kLblCustomField5">Custom Field 5</string>
    <string name="kLblCustomField6">Custom Field 6</string>
    <string name="kLblCustomField7">Custom Field 7</string>
    <string name="kLblCustomField8">Custom Field 8</string>
    <string name="kLblCustomField9">Custom Field 9</string>
    <string name="kLblCustomField10">Custom Field 10</string>
    <string name="kLblCustomField11">Custom Field 11</string>
    <string name="kLblCustomField12">Custom Field 12</string>
    <string name="kLblCustomField13">Custom Field 13</string>
    <string name="kLblCustomField14">Custom Field 14</string>
    <string name="kLblCustomField15">Custom Field 15</string>
</resources>