<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:padding="10dp" >

    <TableLayout
        android:id="@+id/tblContactDetails"
        android:layout_width="fill_parent"
        android:layout_height="172dp"
        android:columnCount="1"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblId"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtContactId"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblStatus"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtStatus"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblFirstName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblLastName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblMiddleName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtMiddleName"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblModifiedDate"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtModifiedDate"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="datetime"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblSourceDetails"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtSourceDetails"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblWorkPhone"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtWorkPhone"
                android:layout_weight="0.7"
                android:inputType="phone"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblCellPhone"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtCellPhone"
                android:layout_weight="0.7"
                android:inputType="phone"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblHomePhone"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtHomePhone"
                android:layout_weight="0.7"
                android:inputType="phone"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblFax"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtFax"
                android:layout_weight="0.7"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblPrefix"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtPrefix"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblJobTitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtJobTitle"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblCompanyName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtCompanyName"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblEmailAddress1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtEmailAddress1"
                android:layout_weight="0.7"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblEmailAddress2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtEmailAddress2"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblEmailAddress3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtEmailAddress3"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblAddress"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_weight="0.7"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblCustomFields"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtCustomFields"
                android:layout_weight="0.7"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblLists"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtLists"
                android:layout_weight="0.7"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblNotes"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtNotes"
                android:layout_weight="0.7"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:padding="0dp" >

            <Button
                android:id="@+id/btnUpdate"
                android:text="@string/kLblUpdate" />
        </TableRow>
    </TableLayout>

</ScrollView>